switched to .net 6.0

--- a/Lombiq.JsonEditor.csproj
+++ b/Lombiq.JsonEditor.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <DefaultItemExcludes>$(DefaultItemExcludes);.git*;node_modules\**;Tests\**</DefaultItemExcludes>
+
   </PropertyGroup>
-  
+
   <ItemGroup>
     <None Remove="node_modules\**" />
     <None Remove="Tests\**" />
